# bfci

./: .clang-format  .gitignore  CMakeLists.txt  CODEOWNERS  README.md  TODO.md
.github/workflows/: build.yml  check-clang-format.yml  ci.yml  lint.yml
CMake/: CompileOptions.cmake  Macros.cmake
app/: CMakeLists.txt  app.c
examples/: 5x10.bf  cat.bf
include/bfci/: bfci.h  data.h  debug.h  intermediate.h  io.h  memory.h  utils.h
misc/: help.txt
scripts/: clang-format-all.sh
src/: CMakeLists.txt  bfci.c  data.c  intermediate.c  io.c  memory.c
tests/: Tests.cmake
